--- a/css/style.css
+++ b/css/style.css
@@ -212,6 +212,7 @@ img {
 .btn-style-three:before {
     content: '';
     position: absolute;
+    color: #ffffff;
     top: 0;
     left: 0;
     width: 100%;
