--- a/css/responsive.css
+++ b/css/responsive.css
@@ -353,6 +353,11 @@
         font-size: 50px;
     }
 }
+@media only screen and (min-width: 1023px) {
+     .programs-block .inner-block .content .content-inner {
+        margin: 20px;
+    }
+}
 
 @media only screen and (max-width: 767px) {
     .main-header {
